Hoàn thành dự án

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           <!-- menu item -->
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">About</a>
@@ -54,13 +56,15 @@
               <a class="nav-link" aria-current="page" href="#">Courses</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">FAQ</a>
+              <a class="nav-link" aria-current="page" href="./faq.html">FAQ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Contact</a>
+              <a class="nav-link" aria-current="page" href="./contact.html"
+                >Contact</a
+              >
             </li>
           </ul>
           <!-- nút đăng kí và đăng nhập -->
